--- a/Assignment2_MachingLearning.ipynb
+++ b/Assignment2_MachingLearning.ipynb
@@ -4,13 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "hxMJ6F5-ZY5U",
-        "hT7mgHe-ZMDl",
-        "feXgyGcji0O-",
-        "B9OskeJOph3r"
-      ],
-      "authorship_tag": "ABX9TyO3c0SSfuF0gB0ALHc/S7AU",
+      "authorship_tag": "ABX9TyNnlt6NSakrECTtH6wvVZNE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,13 +133,13 @@
         "bedroomChange = sk.impute.SimpleImputer(strategy='median')\n",
         "df['total_bedrooms'] = bedroomChange.fit_transform(df[['total_bedrooms']])\n",
         "\n",
-        "# Scale numerical features\n",
+        "# Scale numerical features (Change later if you need Andrew >:( ))\n",
         "## scaler = sk.preprocessing.StandardScaler()\n",
         "## df[['longitude', 'latitude', 'housing_median_age', 'total_rooms', 'total_bedrooms',\n",
         "    ## 'population', 'households', 'median_income']] = scaler.fit_transform(df[['longitude', 'latitude', 'housing_median_age', 'total_rooms', 'total_bedrooms',\n",
         "                                                                               ## 'population', 'households', 'median_income']])\n",
         "\n",
-        "# Display the preprocessed dataset\n",
+        "# Display\n",
         "print(df.head())"
       ],
       "metadata": {
