--- a/Assignment2_MachingLearning.ipynb
+++ b/Assignment2_MachingLearning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnlt6NSakrECTtH6wvVZNE",
+      "authorship_tag": "ABX9TyOFNLEzhLddYuiA2/qE3Q3U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,12 +55,13 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "import openpyxl\n",
-        "from sklearn import impute, preprocessing, model_selection, linear_model, ensemble"
+        "from sklearn import impute, preprocessing, model_selection, linear_model, ensemble\n",
+        "from sklearn.model_selection import GridSearchCV"
       ],
       "metadata": {
         "id": "pxdCZKclOlRb"
       },
-      "execution_count": 103,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -419,8 +420,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
         "# Defining the parameter grid for Random Forest (Googled What Parameters)\n",
         "rf_param_grid = {\n",
         "    'n_estimators': [50, 100, 150],\n",
